# spco2_mlda

./: .gitmodules  README.md
rgiro_spco2_slam/bash/: reset-spco2-slam-output.bash
rgiro_spco2_slam/src/: __init__.py  spco2_learn_concepts.py  trial.py
spco2_mlda/: .gitignore  CMakeLists.txt  README.md  package.xml
spco2_mlda/bash/: reset-data-output.bash
spco2_mlda/launch/: ancestral_sampling_object2place.launch  judge_target_object.launch
spco2_mlda/src/: __init__.py  ancestral_sampling_object2place.py  object_recognition_yolo2mlda.py
spco2_mlda/src/modules/: __init__.py  capture_img.py  connect_mlda.py  crop_img.py  send_img.py
spco2_mlda/srv/: SendImageYOLO.srv  SendImageYOLOv5.srv
