<?xml version="1.0"?>
<package format="2">
  <name>spco2_mlda</name>
  <version>1.0.0</version>
  <description>The spco2_mlda package</description>
  <maintainer email="hasegawa.shoichi@em.ci.ritsumei.ac.jp">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

